tests/baselines/reference/incompleteObjectLiteral1.errors.txt
incompleteObjectLiteral1.ts(1,12): error TS18004: No value exists in scope for the shorthand property 'aa'. Either declare one or provide an initializer.
incompleteObjectLiteral1.ts(1,14): error TS1005: ',' expected.


==== incompleteObjectLiteral1.ts (2 errors) ====
    var tt = { aa; }
               ~~
!!! error TS18004: No value exists in scope for the shorthand property 'aa'. Either declare one or provide an initializer.
                 ~
!!! error TS1005: ',' expected.
    var x = tt;